terraform/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: 917929205953.dkr.ecr.sa-east-1.amazonaws.com/customer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 700Mi
              cpu: "300m"
            requests:
              memory: 700Mi
              cpu: "300m"
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/info
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 40
            timeoutSeconds: 2
            failureThreshold: 30
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  ports:
    - port: 8080
      name: http
  type: LoadBalancer
  selector:
    app: product-service
