terraform/k8s/istio.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "product.example.com"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: product-service-destination
spec:
  host: product-service
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-service-route
spec:
  hosts:
    - "product.example.com"
  gateways:
    - product-gateway
  http:
    - route:
        - destination:
            host: product-service
            port:
              number: 8080
      timeout: 1.5s
      fault:
        delay:
          percentage:
            value: 33
          fixedDelay: 3s
